--- a/OneExam/Base.lproj/Main.storyboard
+++ b/OneExam/Base.lproj/Main.storyboard
@@ -56,57 +56,8 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xRF-fF-2yS">
-                                <rect key="frame" x="30.5" y="265" width="314" height="166"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="6lP-fo-9Z9">
-                                        <rect key="frame" x="0.0" y="0.0" width="314" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="vEe-hd-rsq"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="1. 北京？"/>
-                                        <connections>
-                                            <action selector="actionButton1:" destination="9RI-fM-OD1" eventType="touchUpInside" id="Sl6-m3-uqM"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="l9S-vO-fSr">
-                                        <rect key="frame" x="0.0" y="44" width="314" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="nq6-Wg-YVD"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="2. 北京？"/>
-                                        <connections>
-                                            <action selector="actionButton2:" destination="9RI-fM-OD1" eventType="touchUpInside" id="99m-va-C0z"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="EdD-jl-zOF">
-                                        <rect key="frame" x="0.0" y="88" width="314" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="G8o-m4-d5i"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="3. 北京？"/>
-                                        <connections>
-                                            <action selector="actionButton3:" destination="9RI-fM-OD1" eventType="touchUpInside" id="OnC-An-DRk"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="kBc-Qv-7Ph">
-                                        <rect key="frame" x="0.0" y="132" width="314" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="X1M-Sc-A0R"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title="4. 北京？"/>
-                                        <connections>
-                                            <action selector="actionButton4:" destination="9RI-fM-OD1" eventType="touchUpInside" id="1uM-NJ-4jf"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="qXs-rQ-XkC">
-                                <rect key="frame" x="37.5" y="631" width="300" height="36"/>
+                                <rect key="frame" x="37.5" y="720" width="300" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="EVa-Em-qNr"/>
                                 </constraints>
@@ -116,12 +67,70 @@
                                     <action selector="nextButton:" destination="9RI-fM-OD1" eventType="touchUpInside" id="5ot-lv-F4c"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xRF-fF-2yS">
+                                <rect key="frame" x="30.5" y="406" width="314" height="214"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="6lP-fo-9Z9">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="T6X-X2-TFk"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="vEe-hd-rsq"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="z8N-CE-NsL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="1. 北京？"/>
+                                        <connections>
+                                            <action selector="actionButton1:" destination="9RI-fM-OD1" eventType="touchUpInside" id="Sl6-m3-uqM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="l9S-vO-fSr">
+                                        <rect key="frame" x="0.0" y="60" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="iel-mb-8Ne"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="nq6-Wg-YVD"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="2. 北京？"/>
+                                        <connections>
+                                            <action selector="actionButton2:" destination="9RI-fM-OD1" eventType="touchUpInside" id="99m-va-C0z"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="EdD-jl-zOF">
+                                        <rect key="frame" x="0.0" y="120" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="G8o-m4-d5i"/>
+                                            <constraint firstAttribute="height" constant="50" id="lCX-Hm-r7W"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="3. 北京？"/>
+                                        <connections>
+                                            <action selector="actionButton3:" destination="9RI-fM-OD1" eventType="touchUpInside" id="OnC-An-DRk"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="kBc-Qv-7Ph">
+                                        <rect key="frame" x="0.0" y="180" width="314" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="BBb-2q-p62"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="X1M-Sc-A0R"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="4. 北京？"/>
+                                        <connections>
+                                            <action selector="actionButton4:" destination="9RI-fM-OD1" eventType="touchUpInside" id="1uM-NJ-4jf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="6lP-fo-9Z9" firstAttribute="top" secondItem="xRF-fF-2yS" secondAttribute="top" id="GkN-of-NHJ"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="xRF-fF-2yS" firstAttribute="top" secondItem="Kef-a9-M0A" secondAttribute="bottom" constant="150" id="6KM-Lf-1Vv"/>
                             <constraint firstItem="qXs-rQ-XkC" firstAttribute="centerX" secondItem="LZw-WL-N6B" secondAttribute="centerX" id="Ann-OI-Il6"/>
                             <constraint firstItem="qXs-rQ-XkC" firstAttribute="bottom" secondItem="9yP-tA-KP2" secondAttribute="bottom" id="NNb-kk-qN2"/>
-                            <constraint firstItem="qXs-rQ-XkC" firstAttribute="top" secondItem="xRF-fF-2yS" secondAttribute="bottom" constant="200" id="gbn-vz-C64"/>
+                            <constraint firstItem="qXs-rQ-XkC" firstAttribute="top" secondItem="xRF-fF-2yS" secondAttribute="bottom" constant="100" id="gbn-vz-C64"/>
                             <constraint firstAttribute="trailing" secondItem="Kef-a9-M0A" secondAttribute="trailing" constant="30" id="lls-Ms-seO"/>
                             <constraint firstItem="Kef-a9-M0A" firstAttribute="leading" secondItem="9yP-tA-KP2" secondAttribute="leading" constant="30" id="lw6-vb-k1T"/>
                             <constraint firstItem="Kef-a9-M0A" firstAttribute="top" secondItem="9yP-tA-KP2" secondAttribute="top" constant="110" id="xb2-nn-Ias"/>
@@ -153,8 +162,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZK5-eM-cNp">
-                                <rect key="frame" x="0.0" y="60" width="375" height="557"/>
+                                <rect key="frame" x="0.0" y="60" width="375" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="qs4-At-dt3"/>
+                                </constraints>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -162,7 +174,6 @@
                             <constraint firstItem="K9O-57-HuG" firstAttribute="trailing" secondItem="ZK5-eM-cNp" secondAttribute="trailing" id="CBB-p1-Nfs"/>
                             <constraint firstItem="ZK5-eM-cNp" firstAttribute="leading" secondItem="K9O-57-HuG" secondAttribute="leading" id="FK3-yy-fzY"/>
                             <constraint firstItem="ZK5-eM-cNp" firstAttribute="top" secondItem="K9O-57-HuG" secondAttribute="top" constant="40" id="cDN-KO-8Rq"/>
-                            <constraint firstItem="K9O-57-HuG" firstAttribute="bottom" secondItem="ZK5-eM-cNp" secondAttribute="bottom" constant="50" id="ojw-Gg-mSq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="K9O-57-HuG"/>
                     </view>
